config/e2e/contour.yaml
---
kind: ContourDeployment
apiVersion: projectcontour.io/v1alpha1
metadata:
  name: contour-config
spec:
  envoy:
    networkPublishing:
      type: NodePortService
